# gmail-mcp-server

./: .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SETUP_IMAP.md  api_server.py  docker-compose.yml  example.py  gmail_client.py  gmail_mcp_server.py  mcp-config.json  pyproject.toml  requirements.txt  setup.py
.claude/hooks/: block_env_read.py
.claude/skills/backend/: SKILL.md
.claude/skills/frontend/: SKILL.md
.claude/skills/new-branch/: SKILL.md
.claude/skills/pr-review/: SKILL.md
ui/: app.js  index.html  styles.css
